# jexpand

./: .gitignore  FEATURES.md  IMPLEMENTATION_SUMMARY.md  JEXPAND.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  TLDR.md  final_prompt.md  final_test.md  generate_toc.py  improved_prompt.md  new_todo.md  prompt.md  pyproject.toml  result.jxp  result_fixed.jxp  setup.py  setup.sh  temp.md
.github/workflows/: python-publish.yml
jexpand/: feature_todo.md  main.py  shorthand_parser.py
tests/: README.md
tests/01_core_functions/include_file/: sample_file.txt  template.md  test_file.txt
tests/01_core_functions/include_folder/: template.md
tests/01_core_functions/include_folder/sample_folder/: file2.txt
tests/01_core_functions/include_folder/sample_folder/subfolder/: nested_file.js
tests/02_template_filters/code_block/: template.md
tests/02_template_filters/comment_out/: template.md
tests/02_template_filters/indent/: template.md
tests/02_template_filters/line_numbers/: template.md  test_line_numbers.md
tests/03_compilation_features/intermediate_compilation/: final.md  intermediate.md  template.md
tests/04_operating_modes/non_strict_mode/: template.md
tests/04_operating_modes/strict_mode/: template.md
tests/05_output_formats/xml_format/: template.md
tests/05_output_formats/xml_format/sample_files/: config.yml  readme.txt
tests/06_cli_features/: test_template_clipboard.md
tests/06_cli_features/basic_cli/: output.md  template.md
tests/07_jexpand_blocks/: debug_loop.md  debug_simple.md  debug_triple.md  test_copy.md  test_debug.md  test_fstring.md  test_minimal.md  test_template_python.md  test_triple_quote.md
tests/08_shorthand_parser/: test_shorthand_parser.py
tests/09_edge_cases/: test_edge_cases.md
tests/10_set_rem/: test_comprehensive.md  test_multiple.md  test_no_title.md  test_set_rem_after.md  test_set_rem_before.md
