[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jexpand"
version = "1.0.0"
description = "Enhanced file expansion using Jinja2 templates with flexible functionality"
readme = "README.md"
authors = [
    { name = "Ohad Rubin", email = "ohad.rubin@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jinja2>=3.0.0",
    "fire>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/OhadRubin/jexpand"
Repository = "https://github.com/OhadRubin/jexpand"
"Bug Tracker" = "https://github.com/OhadRubin/jexpand/issues"

[project.scripts]
jexpand = "jexpand:main" 